[gd_scene load_steps=9 format=2]

[ext_resource path="res://screens/basic_screen.tscn" type="PackedScene" id=1]
[ext_resource path="res://screens/main_menu/main_screen.gd" type="Script" id=2]
[ext_resource path="res://levels/tilesets/tileset_godot.tres" type="TileSet" id=3]
[ext_resource path="res://screens/main_menu/title_screen_01.png" type="Texture" id=4]
[ext_resource path="res://interface/menu_bar_hilit.tres" type="Theme" id=5]
[ext_resource path="res://actors/enemies/2_damage.ogg" type="AudioStream" id=6]


[sub_resource type="GDScript" id=1]

script/source = "extends VBoxContainer

# class member variables go here, for example:
# var a = 2
# var b = \"textvar\"

func _ready():
	$\"play\".grab_focus()
"

[sub_resource type="GDScript" id=2]

script/source = "extends HSlider

func _on_bgm_volume_focus_entered():
	set_process(true)
	
func _on_bgm_volume_focus_exited():
	set_process(false)

func _ready():
	set_process(false)

func _process(delta):
	if Input.is_action_pressed(\"left\"):
		value -= 1
	elif Input.is_action_pressed(\"right\"):
		value += 1


"

[node name="main_screen" index="0" instance=ExtResource( 1 )]

script = ExtResource( 2 )
next_scene = "res://levels/level_01/level_01.tscn"

[node name="tile_map" type="TileMap" parent="." index="0"]

modulate = Color( 0.509804, 0.509804, 0.509804, 1 )
mode = 0
tile_set = ExtResource( 3 )
cell_size = Vector2( 64, 64 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 0, 0, 0, 2, 1, 0, 4, 2, 0, 6, 0, 0, 8, 1, 0, 10, 2, 0, 12, 0, 0, 14, 1, 0, 131072, 1073741827, 0, 131074, 1073741829, 0, 131076, 1073741828, 0, 131078, 1073741827, 0, 131080, 1073741829, 0, 131082, 1073741828, 0, 131084, 1073741827, 0, 131086, 1073741829, 0, 262144, 1073741828, 0, 262146, 1073741827, 0, 262148, 1073741829, 0, 262150, 1073741828, 0, 262152, 1073741827, 0, 262154, 1073741829, 0, 262156, 1073741828, 0, 262158, 1073741827, 0, 393216, 1073741829, 0, 393218, 1073741828, 0, 393220, 1073741827, 0, 393222, 1073741829, 0, 393224, 1073741828, 0, 393226, 1073741827, 0, 393228, 1073741829, 0, 393230, 1073741828, 0, 524288, 1073741826, 0, 524290, 1073741824, 0, 524292, 1073741825, 0, 524294, 1073741826, 0, 524296, 1073741824, 0, 524298, 1073741825, 0, 524300, 1073741826, 0, 524302, 1073741824, 0 )
_sections_unfolded = [ "Visibility" ]

[node name="title" type="TextureRect" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1024.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="menu" type="VBoxContainer" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 400.0
margin_top = 432.0
margin_right = 624.0
margin_bottom = 584.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 19
alignment = 0
script = SubResource( 1 )
_sections_unfolded = [ "custom_constants" ]

[node name="play" type="Button" parent="menu" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 224.0
margin_bottom = 38.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "play"
flat = false
align = 1
_sections_unfolded = [ "Size Flags" ]

[node name="instructions" type="Button" parent="menu" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 57.0
margin_right = 224.0
margin_bottom = 95.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "instructions"
flat = false
align = 1
_sections_unfolded = [ "Size Flags" ]

[node name="controls" type="Button" parent="menu" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 114.0
margin_right = 224.0
margin_bottom = 152.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "controls"
flat = false
align = 1
_sections_unfolded = [ "Size Flags" ]

[node name="credits" type="Button" parent="menu" index="3"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 114.0
margin_right = 224.0
margin_bottom = 152.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "credits"
flat = false
align = 1
_sections_unfolded = [ "Size Flags" ]

[node name="bgm_volume" type="HSlider" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 688.0
margin_top = 416.0
margin_right = 1008.0
margin_bottom = 456.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
theme = ExtResource( 5 )
min_value = -24.0
max_value = 12.0
step = 1.0
page = 0.0
value = -8.0
exp_edit = false
rounded = false
editable = true
tick_count = 0
ticks_on_borders = false
focus_mode = 0
script = SubResource( 2 )
_sections_unfolded = [ "Percent", "Theme" ]

[node name="label" type="Label" parent="bgm_volume" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = -16.0
margin_right = 320.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "background music"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="sfx_volume" type="HSlider" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 688.0
margin_top = 480.0
margin_right = 1008.0
margin_bottom = 520.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
theme = ExtResource( 5 )
min_value = -24.0
max_value = 12.0
step = 1.0
page = 0.0
value = -8.0
exp_edit = false
rounded = false
editable = true
tick_count = 0
ticks_on_borders = false
focus_mode = 0
script = SubResource( 2 )
_sections_unfolded = [ "Percent", "Theme" ]

[node name="label" type="Label" parent="sfx_volume" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = -16.0
margin_right = 320.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "sound effects"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="sfx_test" type="AudioStreamPlayer" parent="sfx_volume" index="1"]

stream = ExtResource( 6 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "sfx"

[connection signal="button_up" from="menu/play" to="." method="change_scene"]

[connection signal="button_up" from="menu/instructions" to="." method="change_scene" binds= [ "res://screens/instructions/instructions_screen.tscn" ]]

[connection signal="button_up" from="menu/controls" to="." method="change_scene" binds= [ "res://screens/control_config/controls_screen.tscn" ]]

[connection signal="value_changed" from="bgm_volume" to="." method="_on_bgm_volume_value_changed"]

[connection signal="value_changed" from="sfx_volume" to="." method="_on_sfx_volume_value_changed"]


